objects/SE_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Cisco_SE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field shows that SEM has assigned SE is from Cisco</description>
        <label>Cisco SE</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N30000001tZyHEAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contribution__c</fullName>
        <description>This field will provide % of SE Contribution on a given Opportunity</description>
        <label>Contribution %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Notify_AM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field specifies whether the email has to be sent to the AM notifying him about the SE Assignment to his requested Opportunity</description>
        <label>Notify AM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notify_SE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field specifies whether an email has to be sent to the SE regarding the Opportunity Assignment</description>
        <label>Notify SE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>This field will have the name of the Opportunity which requires SE Involvment</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>SE Assignments</relationshipLabel>
        <relationshipName>R00N30000001tZyMEAU</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Partner_SE__c</fullName>
        <description>This field shows that SEM has assigned SE is from a Partner</description>
        <label>Partner SE</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SE_Assignment_Type__c</fullName>
        <description>This field provides if the SE Assigned to an Opportunity is a Primary or Secondary SE</description>
        <label>SE Assignment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Primary</fullName>
                    <default>true</default>
                    <label>Primary</label>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SE_Engagement_Type__c</fullName>
        <description>Added for June QW release. Reference QW 3452. SFDC SE Beta enhancements</description>
        <label>SE Engagement Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Contribution Intensity: High</fullName>
                </value>
                <value>
                    <fullName>Contribution Intensity: Low</fullName>
                </value>
                <value>
                    <fullName>Contribution Intensity: Medium</fullName>
                </value>
                <value>
                    <fullName>Engaged: Proactive</fullName>
                </value>
                <value>
                    <fullName>Engaged: Reactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>This Object is for SE Lite Project which will allow SEM's to assign SE for any given opportunity</description>
    <label>zzSE Assignment</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>SE Assignment</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SE Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>zzCisco_SE_or_Partner_SE_Not_Both</fullName>
        <active>false</active>
        <description>This Validation Rule will validate if user has not selected both Cisco SE or Partner SE</description>
        <errorConditionFormula>OR(AND(LEN(Cisco_SE__c) &lt; 1, LEN(Partner_SE__c ) &lt; 1), AND(LEN(Cisco_SE__c) &gt;0, LEN(Partner_SE__c ) &gt;0))</errorConditionFormula>
        <errorMessage>SE Assignment records can contain either a Cisco SE or a Partner SE, not both.  If you need to assign an additional SE to this Opportunity, please create a new SE Assignment</errorMessage>
    </validationRules>
</CustomObject>